--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "questionnaire-site",
   "version": "1.0.0",
   "description": "Questionnaire site",
+  "license": "MIT",
   "dependencies": {
     "bower": "^1.8.0"
   },
   "scripts": {
-    "postinstall": "./node_modules/bower/bin/bower install"
+    "postinstall": "bower install"
   }
 }
