--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "1.0.0",
   "description": "Questionnaire site",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mattkernow/questionnaire-site"
+  },
   "dependencies": {
     "bower": "^1.8.0"
   },
   "scripts": {
-    "postinstall": "bower install"
+    "postinstall": "npm inbower install"
   }
 }
