--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
 .idea/
 db.sqlite3
 *.pyc
-questionnaire_site/static/
 node_modules/
-questionnaire_app/static/
-questionnaire_site/staticfiles/
+staticfiles/
